@@ -2,6 +2,7 @@ package domain;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.DisplayName;
@@ -10,47 +11,60 @@ import org.junit.jupiter.api.Test;
 class StatisticsTest {
 
   @Test
-  @DisplayName("로또 번호와 당첨 번호를 비교하여 당첨 등수를 제대로 계산한다")
+  @DisplayName("로또 번호와 당첨 번호를 비교하여 당첨 등수를 제대로 계산하고 상금과 수익률을 계산한다.")
   void calculateMatchCounts() {
     // Given
-    int[][] testNumbers = {
-        {1, 2, 3, 4, 5, 6},
-        {1, 2, 3, 4, 5, 7},
-        {1, 2, 3, 4, 7, 8},
-        {1, 2, 3, 7, 8, 9},
-        {1, 2, 7, 8, 9, 10},
-        {1, 7, 8, 9, 10, 11},
-        {7, 8, 9, 10, 11, 12}
-    };
-    NumbersGenerator numbersGenerator = new TestNumberGenerator(testNumbers);
-    Money money = new Money(7000);
-    Lottos lottos = Lottos.createLottos(money, numbersGenerator);
-    WinningNumbers winningNumbers = new WinningNumbers(List.of(1, 2, 3, 4, 5, 6));
-    Money investedMoney = new Money(7000);
+    List<Lotto> lottoList = Arrays.asList(
+        Lotto.createManual(Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3), new LottoNumber(4),
+            new LottoNumber(5), new LottoNumber(6))),
+        Lotto.createManual(Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3), new LottoNumber(4),
+            new LottoNumber(5), new LottoNumber(7))),
+        Lotto.createManual(Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3), new LottoNumber(4),
+            new LottoNumber(5), new LottoNumber(9))),
+        Lotto.createManual(Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3), new LottoNumber(4),
+            new LottoNumber(8), new LottoNumber(9))),
+        Lotto.createManual(Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3), new LottoNumber(9),
+            new LottoNumber(10), new LottoNumber(11))),
+        Lotto.createManual(
+            Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(9), new LottoNumber(10),
+                new LottoNumber(11), new LottoNumber(12))),
+        Lotto.createManual(
+            Arrays.asList(new LottoNumber(1), new LottoNumber(9), new LottoNumber(10), new LottoNumber(11),
+                new LottoNumber(12), new LottoNumber(13)))
+    );
 
-    Statistics statistics = new Statistics(lottos, winningNumbers, investedMoney);
+    Lottos lottos = new Lottos(lottoList, 7, 7, new LottoPrice(7000));
+
+    WinningNumbers winningNumbers = new WinningNumbers(
+        Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3), new LottoNumber(4),
+            new LottoNumber(5), new LottoNumber(6)));
+    BonusNumber bonusNumber = new BonusNumber(new LottoNumber(7), winningNumbers);
+    LottoPrice investedMoney = new LottoPrice(7000);
+    Statistics statistics = new Statistics(lottos, winningNumbers, investedMoney, bonusNumber);
 
     // When
     Map<WinningRank, Integer> matchCounts = statistics.calculateMatchCounts();
     long totalPrize = statistics.calculateTotalPrize(matchCounts);
     double profitRate = statistics.calculateProfitRate(matchCounts);
 
-    long expectedPrize =
-        (WinningRank.SIX.getPrize() * 1) +
-        (WinningRank.FIVE.getPrize() * 1) +
-        (WinningRank.FOUR.getPrize() * 1) +
-        (WinningRank.THREE.getPrize() * 1);
-
-    assertThat(totalPrize).isEqualTo(expectedPrize);
-
-    double expectedProfitRate = (double) expectedPrize / investedMoney.getPurchaseMoney();
-
-    // Then
+    // Then: 매칭된 로또 개수 검증
     assertThat(matchCounts.get(WinningRank.SIX)).isEqualTo(1);
+    assertThat(matchCounts.get(WinningRank.FIVE_WITH_BONUS)).isEqualTo(1);
     assertThat(matchCounts.get(WinningRank.FIVE)).isEqualTo(1);
     assertThat(matchCounts.get(WinningRank.FOUR)).isEqualTo(1);
     assertThat(matchCounts.get(WinningRank.THREE)).isEqualTo(1);
-    assertThat(matchCounts.get(WinningRank.NONE)).isEqualTo(3);
-    assertThat(profitRate).isEqualTo(expectedProfitRate);
+    assertThat(matchCounts.get(WinningRank.NONE)).isEqualTo(2);
+
+    // Then: 총 상금 계산
+    assertThat(totalPrize).isEqualTo(
+        WinningRank.SIX.getPrize() +
+        WinningRank.FIVE_WITH_BONUS.getPrize() +
+        WinningRank.FIVE.getPrize() +
+        WinningRank.FOUR.getPrize() +
+        WinningRank.THREE.getPrize()
+    );
+
+    // Then: 수익률 계산
+    assertThat(profitRate).isEqualTo((double) totalPrize / investedMoney.getPurchaseMoney());
   }
 }
